# TermProject

./: .dockerignore  .env.example  .gitignore  README.md  Vision of my project.md  pyproject.toml
.github/workflows/: docker-build.yml  docker-publish.yml  docker-push.yml  pylint.yml  test.yml  tests.yml
deploy/: Dockerfile  docker-compose.yml  requirements.txt
myweb/: settings.py  urls.py
src/movie_app/: admin.py  forms.py  models.py  urls.py  views.py
src/movie_app/migrations/: 0001_initial.py  0002_alter_ratingstar_options.py  0003_actor_description_en_actor_description_ru_and_more.py  0004_remove_actor_description_en_and_more.py
src/movie_app/templates/: base.html
src/movie_app/templatetags/: movie_tag.py
src/music/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/music/admin/: __init__.py  artist.py  playlist.py  track.py
src/music/migrations/: 0001_initial.py
src/music/templates/: add_playlist.html  add_track.html  add_track_to_playlist.html  player.html  playlist.html  playlist_delete.html  playlist_edit.html  playlists.html
src/myweb/: __init__.py  celery.py  settings.py  urls.py  yasg.py
src/pins/: apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/pins/admin/: __init__.py  pin.py  pin_category.py
src/pins/migrations/: 0001_initial.py  0002_alter_pin_category_alter_pin_img_alter_pin_slug_and_more.py  0003_remove_pin_slug_remove_pin_text_remove_pin_title_and_more.py
src/pins/templates/: add_pin.html  gallery.html
src/users/: admin.py  apps.py  consumers.py  forms.py  models.py  serializers.py  service.py  tasks.py  tests.py  urls.py  views.py
templates/: main.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/templates/: base_user.html  login.html  profile.html
(+34 files in other folders)
