[tool.poetry]
name = "termproject"
version = "0.0.1"
description = "This project was made specially for termproject ITIS KPFU 2023"
authors = ["Joseph Cartaphilus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
poetry = "^1.3.2"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
social-auth-app-django = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
